--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,8 @@ h6 {
 
 img {
   display: block;
-  margin: 0px auto;
+  max-width: 100%;
+  height: auto;
 }
 
 ul {
@@ -64,10 +65,29 @@ body {
 }
 
 .container {
-  width: 1200px;
+  /* width: 1200px; */
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .btn {
@@ -579,10 +599,27 @@ body {
   align-items: center;
   justify-content: center;
   border-radius: 4px;
-  width: 270px;
   height: 120px;
   background: var(--aftermain-color);
   color: var(--social-icon);
+}
+
+@media screen and (min-widht: 480px) {
+  .hang-list__icon-item {
+    width: 450px;
+  }
+}
+
+@media screen and (min-widht: 768px) {
+  .hang-list__icon-item {
+    width: 354px;
+  }
+}
+
+@media screen and (min-widht: 1200px) {
+  .hang-list__icon-item {
+    width: 270px;
+  }
 }
 
 .hang-list__svg-item {
@@ -592,19 +629,48 @@ body {
 }
 
 .hang-list {
-  display: flex;
+  margin-bottom: -30px;
 }
 
-.hang-list__item {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .hang-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
 }
 
-.hang-list__item:last-child {
-  margin-right: 0px;
+@media screen and (min-width: 1200px) {
+  .hang-list {
+    width: 1200px;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .hang-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hang-list__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hang-list__item {
+    flex-basis: calc(100% / 4 - 30px);
+    margin-bottom: 0;
+  }
 }
 
 .hang-list__title {
   font-weight: 700;
+  text-align: center;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -613,18 +679,29 @@ body {
   margin-bottom: 10px;
 }
 
+@media screen and (min-width: 768px) {
+  .hang-list__title {
+    text-align: left;
+  }
+}
+
 .hang-list__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
-  width: 270px;
-  height: 75px;
 }
 
 .hang {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hang {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .main {
@@ -648,14 +725,14 @@ body {
   margin-bottom: -30px;
 }
 
-.main-list__item {
+.main__item {
   flex-basis: calc(100% / 3 - 30px);
   margin-right: 30px;
   margin-bottom: 30px;
   position: relative;
 }
 
-.main-list__text {
+.main__text {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -677,8 +754,15 @@ body {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team {
@@ -687,21 +771,44 @@ body {
 }
 
 .team-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -30px;
+  /*  display: flex;
+  flex-wrap: wrap; */
+  /* margin-right: -30px;
+  margin-bottom: -30px; */
   margin-bottom: -30px;
 }
 
-.team-list__item {
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
+}
+
+.team__item {
   background: var(--main-title-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  width: 270px;
-  height: 428px;
-  flex-basis: calc(100% / 4 - 30px);
+  /*  width: 270px;
+  height: 428px; */
+  /*  flex-basis: calc(100% / 4 - 30px);
   margin-right: 30px;
+  margin-bottom: 30px; */
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .team__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__item {
+    flex-basis: calc(100% / 4 - 30px);
+  }
 }
 
 .team-title {
@@ -714,7 +821,7 @@ body {
   margin-bottom: 50px;
 }
 
-.team-list__main-text {
+.team__main-text {
   padding: 30px 32px;
 }
 
@@ -794,18 +901,18 @@ body {
   justify-content: center;
 }
 
-.clients-list__item {
+.clients__item {
   flex-basis: calc(100% / 6 - 30px);
   margin-right: 30px;
 }
 
-.clients-list__icon {
+.clients__icon {
   width: 106px;
   height: 60px;
   fill: currentColor;
 }
 
-.clients-list__link {
+.clients__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -821,7 +928,7 @@ body {
   transition: color var(--ms--cubic), border var(--ms--cubic);
 }
 
-.clients-list__link:hover, .clients-list__link:focus {
+.clients__link:hover, .clients__link:focus {
   color: var(--main-button-color);
   border: 1px solid #2196f3;
 }
@@ -838,7 +945,7 @@ body {
   align-items: baseline;
 }
 
-.footer-list__item {
+.footer__item {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -858,26 +965,26 @@ body {
   color: var(--main-title-color);
 }
 
-.footer-list__mail-item {
+.footer__mail-item {
   margin-bottom: 9px;
 }
 
-.footer-list__mail {
+.footer__mail {
   color: var(--second-text-color);
   display: inline-block;
   transition: color var(--ms--cubic);
 }
 
-.footer-list__mail:hover, .footer-list__mail:focus {
+.footer__mail:hover, .footer__mail:focus {
   color: var(--main-button-color);
 }
 
-.footer-list__tel {
+.footer__tel {
   color: var(--second-text-color);
   transition: color var(--ms--cubic);
 }
 
-.footer-list__tel:hover, .footer-list__tel:focus {
+.footer__tel:hover, .footer__tel:focus {
   color: var(--main-button-color);
 }
 
@@ -885,12 +992,12 @@ body {
   display: flex;
 }
 
-.footer-social-list__item {
+.footer-social__item {
   width: 44px;
   height: 44px;
 }
 
-.footer-social-list__item + .footer-social-list__item {
+.footer-social__item + .footer-social__item {
   margin-left: 10px;
 }
 
@@ -913,7 +1020,7 @@ body {
   margin-bottom: 20px;
 }
 
-.footer-social-list__link {
+.footer-social__link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -925,11 +1032,11 @@ body {
   transition: background-color var(--ms--cubic);
 }
 
-.footer-social-list__link:hover, .footer-social-list__link:focus {
+.footer-social__link:hover, .footer-social__link:focus {
   background-color: var(--main-button-color);
 }
 
-.footer-social-list__icon {
+.footer-social__icon {
   fill: currentColor;
 }
 
