--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -18,18 +18,18 @@
   margin-right: -30px;
   justify-content: center;
 }
-.clients-list__item {
+.clients__item {
   flex-basis: calc(100% / 6 - 30px);
   margin-right: 30px;
 }
 
-.clients-list__icon {
+.clients__icon {
   width: 106px;
   height: 60px;
   fill: currentColor;
 }
 
-.clients-list__link {
+.clients__link {
   display: flex;
   align-items: center;
   justify-content: center;
