--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,6 +1,10 @@
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .team {
   background-color: var(--aftermain-color);
@@ -8,21 +12,35 @@
 }
 
 .team-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -30px;
+  /*  display: flex;
+  flex-wrap: wrap; */
+  /* margin-right: -30px;
+  margin-bottom: -30px; */
   margin-bottom: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
 }
-.team-list__item {
+.team__item {
   background: var(--main-title-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  width: 270px;
-  height: 428px;
-  flex-basis: calc(100% / 4 - 30px);
+  /*  width: 270px;
+  height: 428px; */
+  /*  flex-basis: calc(100% / 4 - 30px);
   margin-right: 30px;
+  margin-bottom: 30px; */
   margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+  }
 }
 
 .team-title {
@@ -35,7 +53,7 @@
   margin-bottom: 50px;
 }
 
-.team-list__main-text {
+.team__main-text {
   padding: 30px 32px;
 }
 
