--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
   --main-text-back: rgba(47, 48, 58, 0.8);
   --ms--cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   --button-color: #188ce8;
+  --modal-icon-input-color: #212121;
 }
 
 p,
@@ -52,6 +53,7 @@ button {
   margin: -1px;
 }
 
+/* @import './utils/mixin'; */
 body {
   font-family: 'Roboto', sans-serif;
 }
@@ -70,6 +72,18 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+
+.hero .container {
+  width: 360px;
+  padding: 0;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero .container {
+    width: 696px;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -427,24 +441,246 @@ body {
   transition: background-color 250ms var(--ms--cubic), border-color 250ms var(--ms--cubic);
 }
 
+.mob-menu__btn {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  color: var(--modal-icon-input-color);
+  cursor: pointer;
+  transition: color var(--ms--cubic);
+}
+
+.mob-menu__btn:hover, .mob-menu__btn:focus {
+  color: var(--main-button-color);
+}
+
+.mob-menu__btn.mob-menu__btn--open {
+  margin-left: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .mob-menu__btn.mob-menu__btn--open {
+    display: none;
+  }
+}
+
+.open-btn__svg,
+.close-btn__svg {
+  width: 40px;
+  height: 40px;
+}
+
+.mob-menu__icon {
+  fill: currentColor;
+  display: block;
+}
+
+@media screen and (max-width: 767px) {
+  .mob-menu__container {
+    position: fixed;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 110vh;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    z-index: 999;
+    transform: translateX(105%);
+    transition: color var(--ms--cubic);
+  }
+}
+
+.mob-menu__container.is-open {
+  transform: translateX(0);
+  opacity: 1;
+  visibility: visible;
+  pointer-events: visible;
+}
+
+@media screen and (min-width: 768px) {
+  .mob-menu__container {
+    display: none;
+  }
+}
+
+.mobile__container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (min-width: 480px) {
+  .mobile__container {
+    width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.mob-menu__btn--close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.mob-menu__box {
+  padding: 48px 40px;
+  width: 100%;
+  height: 100%;
+  text-align-last: left;
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 767px) {
+  .mob-menu__box {
+    height: 769px;
+  }
+}
+
+.mob-navigation__list {
+  margin-bottom: auto;
+}
+
+.mob-navigation__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-navigation__link {
+  text-decoration: none;
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 500w;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: var(--second-tittle-color);
+  transition: color var(--ms--cubic);
+}
+
+.mob-navigation__link:hover, .mob-navigation__link:focus {
+  color: var(--main-button-color);
+}
+
+.mob-navigation__link--curent {
+  color: var(--main-button-color);
+}
+
+.mob-contact__list {
+  margin-bottom: 64px;
+}
+
+.mob-contact__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-contact__link {
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.166;
+  letter-spacing: 0.02em;
+  color: var(--first-text-color);
+  text-decoration: none;
+  transition: color var(--ms--cubic);
+}
+
+.mob-contact__link:hover, .mob-contact__link:focus {
+  color: var(--main-button-color);
+}
+
+.mob-contact__link--color {
+  font-size: 34px;
+  line-height: calc(40 / 34);
+  transition: color var(--ms--cubic);
+}
+
+.mob-contact__link--color:hover, .mob-contact__link--color:focus {
+  color: var(--main-button-color);
+}
+
+@media screen and (max-width: 480px) {
+  .mob-contact__link--color {
+    font-size: 8vw;
+  }
+}
+
+.mob-social__list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mob-social__item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 10px;
+}
+
+.mob-social__item:not(:first-child) {
+  padding-left: 10px;
+}
+
+.mob-social__link {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--main-button-color);
+  text-decoration: none;
+  transition: color var(--ms--cubic);
+}
+
+.mob-social__link:hover, .mob-social__link:focus {
+  color: var(--primary-text-color);
+}
+
+.mob-social__link--after::after {
+  content: '';
+  margin-left: 10px;
+}
+
 .header {
   border: 1px solid #ececec;
 }
 
-.header-list {
-  display: flex;
+@media screen and (max-width: 767px) {
+  .header-contacts {
+    display: none;
+  }
 }
 
-.header-contacts {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
+@media screen and (min-width: 1200px) {
+  .header-contacts {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
+  .header-contacts .header-contacts__item + .header-contacts__item {
+    margin-left: 50px;
+  }
 }
 
 .header-nav {
-  display: flex;
-  align-items: center;
-  margin-right: auto;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 767px) {
+  .header-nav {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-nav {
+    margin-left: 93px;
+    margin-right: 0;
+  }
 }
 
 .header-container {
@@ -453,10 +689,45 @@ body {
 }
 
 .header-logo {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  display: block;
+  text-align: center;
   color: var(--main-button-color);
   padding-top: 24px;
   padding-bottom: 24px;
-  margin-right: 93px;
+  /* margin-right: 93px; */
+}
+
+@media screen and (min-width: 1200px) {
+  .header-logo {
+    text-align: left;
+    font-family: Raleway;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    color: var(--main-button-color);
+    text-decoration: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-logo {
+    padding-bottom: 26px;
+    padding-top: 26px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header-logo-footer {
+    margin-bottom: 60px;
+  }
+}
+
+.header-logo-footer .header-logo {
+  padding: 0;
+  margin-bottom: 20px;
 }
 
 .header-logo-footer {
@@ -473,16 +744,51 @@ body {
   margin-right: 0;
 }
 
-.header-contacts__item {
-  margin-right: 30px;
+.header-list {
+  display: flex;
 }
 
-.header-contacts__item:last-child {
-  margin-right: 0;
+.header-list .header-list__item + .header-list__item {
+  margin-right: 50px;
+}
+
+.header-contacts__item {
+  /* margin-right: 30px;
+  &:last-child {
+    margin-right: 0;
+  } */
+  display: flex;
+  align-items: center;
+}
+
+.header-contacts__item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contacts__item:not(:last-child) {
+    margin-bottom: 0px;
+  }
 }
 
 .header-logos {
+  font-family: Raleway;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
   color: var(--second-tittle-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .header-logos {
+    font-family: Raleway;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    color: var(--second-tittle-color);
+  }
 }
 
 .header-list__link {
@@ -505,22 +811,43 @@ body {
   bottom: -3px;
 }
 
-.header-contacts__mail {
+.contacts__item {
+  /* color: var(--first-text-color);
+  transition: color var(--ms--cubic);
+  &:hover,
+  &:focus {
+    color: var(--main-button-color);
+  } */
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  /*  padding-top: 32px;
+  padding-bottom: 32px; */
+  display: flex;
   color: var(--first-text-color);
   transition: color var(--ms--cubic);
 }
 
-.header-contacts__mail:hover, .header-contacts__mail:focus {
+.contacts__item:hover, .contacts__item:focus {
   color: var(--main-button-color);
 }
 
-.header-contacts__tel {
-  color: var(--first-text-color);
-  transition: color var(--ms--cubic);
+@media screen and (max-width: 1199px) {
+  .contacts__item--first {
+    padding-top: 18px;
+  }
+  .contacts__item--second {
+    padding-bottom: 18px;
+  }
 }
 
-.header-contacts__tel:hover, .header-contacts__tel:focus {
-  color: var(--main-button-color);
+@media screen and (min-width: 1200px) {
+  .contacts__item {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .header-social-link {
@@ -540,31 +867,75 @@ body {
 }
 
 .hero {
-  background-color: var(--main-hero-color);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
-  background-repeat: no-repeat;
+  max-width: 480px;
+  min-height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/background-mob@1x.jpg");
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  font-style: inherit;
-  text-align: center;
-  max-height: 600px;
-  max-width: 1600px;
-  margin: 0 auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  background-color: var(--main-hero-color);
+}
+
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/background-mob@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .hero {
+    max-width: 768px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/background-tablet@1x.jpg");
+  }
+}
+
+@media screen and (min-width: 481px) and (min-device-pixel-ratio: 2), screen and (min-width: 481px) and (min-resolution: 192dpi), screen and (min-width: 481px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/background-tablet@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .hero {
+    max-width: 1600px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/background-desktop@1x.jpg");
+  }
+}
+
+@media screen and (min-width: 769px) and (min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 192dpi), screen and (min-width: 769px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/background-desktop@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: 600px;
+  }
 }
 
 .hero__item {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.5;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-title-color);
-  margin: auto;
+  /*  margin: auto;
   display: block;
-  width: 696px;
+  width: 696px; */
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__item {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .btn-input {
@@ -706,6 +1077,18 @@ body {
 
 .main {
   padding-bottom: 94px;
+}
+
+@media screen and (max-width: 1199px) {
+  .work {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .work {
+    padding-top: 0;
+  }
 }
 
 .main__title {
