--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,6 +4,15 @@
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+
+  .hero & {
+    width: 360px;
+    padding: 0;
+    text-align: center;
+    @media screen and (min-width: 1200px) {
+      width: 696px;
+    }
+  }
   @media screen and (min-width: 480px) {
     width: 480px;
   }
