--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -12,4 +12,5 @@
   --main-text-back: rgba(47, 48, 58, 0.8);
   --ms--cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   --button-color: #188ce8;
+  --modal-icon-input-color: #212121;
 }
