--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,6 +1,15 @@
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
+  &.hero {
+    padding: 0;
+  }
 }
 
 .clients-title {
@@ -15,12 +24,24 @@
 .clients-list {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -30px;
   justify-content: center;
+  margin-right: -30px;
+  margin-bottom: -30px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
 }
 .clients__item {
-  flex-basis: calc(100% / 6 - 30px);
   margin-right: 30px;
+  margin-bottom: 30px;
+  flex-basis: calc(100% / 2 - 30px);
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 3 - 30px);
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 6 - 30px);
+    margin-bottom: 0;
+  }
 }
 
 .clients__icon {
