--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,11 +4,12 @@
   padding-top: 60px;
   padding-bottom: 60px;
   & > .container {
-    display: flex;
-    align-items: baseline;
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      align-items: baseline;
+    }
   }
 }
-
 .footer__item {
   font-weight: 400;
   font-size: 14px;
@@ -17,21 +18,31 @@
   color: var(--main-title-color);
   font-style: normal;
   margin-bottom: 9px;
-  display: flex;
+  display: block;
 }
 
 .footer-logos {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
+  @media screen and (min-width: 1200px) {
+    font-family: Raleway;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    color: var(--main-title-color);
+    text-decoration: none;
+  }
 }
-.footer__mail-item {
+
+.footer__mail-item:not(:last-child) {
   margin-bottom: 9px;
 }
-.footer__mail {
+.footer__contact {
   color: var(--second-text-color);
   display: inline-block;
   transition: color var(--ms--cubic);
@@ -40,18 +51,67 @@
     color: var(--main-button-color);
   }
 }
+.contact-information {
+  display: flex;
+  flex-direction: column;
 
-.footer__tel {
-  color: var(--second-text-color);
-  transition: color var(--ms--cubic);
-  &:hover,
-  &:focus {
-    color: var(--main-button-color);
+  margin-bottom: 60px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: left;
+    margin-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+    align-items: baseline;
   }
 }
+.footer__mob-tab {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 60px;
+  align-items: center;
 
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: baseline;
+    /* margin-bottom: 60px; */
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
+}
+.modal-adress-social {
+  @media screen and (min-width: 1200px) {
+    margin-left: auto;
+  }
+}
+.modal-form-field-email {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 0;
+    margin-right: 12px;
+  }
+}
 .footer-social-list {
   display: flex;
+  margin-left: -10px;
 }
 
 .footer-social__item {
@@ -62,12 +122,55 @@
   }
 }
 .footer-adress-social {
-  margin-left: 70px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 70px;
+  }
 }
-.modal-adress-social {
-  margin-left: auto;
+.adress {
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+  }
+}
+.modal-input-email {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  outline: none;
+  box-sizing: border-box;
+  padding-left: 16px;
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.6);
+  transition: border-color var(--ms--cubic);
+
+  &:focus {
+    border-color: var(--main-button-color);
+  }
+  &:focus {
+    border-color: var(--main-button-color);
+  }
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+  }
 }
 
+.sign-up__form {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: flex-end;
+  }
+}
 .footer-social-title {
   font-style: normal;
   font-weight: bold;
@@ -76,6 +179,17 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--aftermain-color);
+  margin-bottom: 20px;
+  text-align: center;
+  @media screen and (min-width: 1200px) {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.03ems;
+    color: var(--aftermain-color);
+    text-align: left;
+  }
   margin-bottom: 20px;
 }
 
