--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -58,9 +58,10 @@
   }
 }
 
-.header-logo-footer {
+.contact-information {
   @media screen and (max-width: 767px) {
     margin-bottom: 60px;
+    text-align: center;
   }
   & .header-logo {
     padding: 0;
@@ -72,7 +73,6 @@
   color: var(--main-button-color);
 
   margin-bottom: 20px;
-  display: flex;
 }
 .header-list__item {
   margin-right: 50px;
