--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -71,8 +71,8 @@
   border-radius: 4px;
   border: none;
   padding: 10px 28px 10px 29px;
-  display: block;
-  margin: auto;
+  display: flex;
+  /* margin: auto; */
   min-width: 200px;
   min-height: 50px;
   transition: background-color var(--ms--cubic), border-radius var(--ms--cubic),
