--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -12,16 +12,27 @@
 }
 
 .modal {
-  width: 528px;
-  height: 581px;
   background-color: #ffffff;
   border-radius: 5px;
-  position: absolute;
   top: 50%;
   left: 50%;
   transform: scale(1) rotate(0) translate(-50%, -50%);
   transition: transform 250ms;
   padding: 40px;
+  position: fixed;
+  transform: translate(-50%, -50%);
+  opacity: 1;
+  padding: 40px;
+  width: 90%;
+  height: auto;
+  @media screen and (min-width: 480px) {
+    width: 450px;
+    height: 609px;
+  }
+  @media screen and(min-width:1200px) {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 .modal-title {
   font-style: normal;
@@ -32,6 +43,14 @@
   letter-spacing: 0.03em;
   color: var(--second-tittle-color);
   margin-bottom: 12px;
+
+  @media screen and(max-width:480px) {
+    font-size: 4vw;
+  }
+
+  @media screen and(min-width:1200px) {
+    line-height: 1.15;
+  }
 }
 .modal-close {
   position: absolute;
@@ -82,6 +101,9 @@
   background-color: transparent;
   color: var(--second-tittle-color);
   transition: border-color var(--ms--cubic);
+  &:focus {
+    border-color: var(--main-button-color);
+  }
   &:focus + .input-icon {
     fill: var(--main-button-color);
   }
@@ -166,6 +188,13 @@
     align-items: center;
     justify-content: center;
   }
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+    justify-content: center;
+    align-items: center;
+    height: 24px;
+  }
 }
 
 .modal-important-text {
@@ -177,6 +206,10 @@
   letter-spacing: 0.03em;
   text-decoration: underline;
   padding-left: 7px;
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .icon-check {
   fill: transparent;
