--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ body {
 }
 
 .hero .container {
-  width: 360px;
+  /*  width: 360px; */
   padding: 0;
   text-align: center;
 }
@@ -235,6 +235,7 @@ body {
 @media screen and (max-width: 480px) {
   .modal-title {
     font-size: 4vw;
+    font-weight: bold;
   }
 }
 
@@ -369,23 +370,46 @@ body {
 }
 
 .modal-check-text {
-  font-size: 14px;
+  display: i;
+  align-items: center;
+  height: 15px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-check-text {
+    font-size: 14px;
+    line-height: 1.71;
+    justify-content: center;
+    align-items: center;
+    height: 24px;
+  }
+}
+
+.modal-check-text {
+  font-size: 12px;
   color: var(--first-text-color);
   display: flex;
-  position: relative;
+  /*  position: relative; */
   align-items: center;
   font-style: normal;
   font-weight: normal;
   line-height: 1.71;
   letter-spacing: 0.03em;
   justify-content: center;
+  align-items: center;
+  /* height: 24px; */
 }
 
 .modal-check-text span {
   width: 16px;
   height: 15px;
   border: 2px solid #000000;
-  margin-right: 5px;
+  margin-right: 8px;
   border-radius: 2px;
   display: flex;
   align-items: center;
@@ -403,7 +427,7 @@ body {
 }
 
 .modal-important-text {
-  font-size: 14px;
+  font-size: 12px;
   color: var(--main-button-color);
   font-style: normal;
   font-weight: normal;
@@ -442,16 +466,23 @@ body {
   fill: var(--main-title-color);
 }
 
-.modal-check-text {
+/* .modal-check-text {
   display: flex;
-  justify-content: center;
   align-items: center;
   height: 15px;
-  font-size: 14px;
-  line-height: 1.71;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
-}
-
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+    justify-content: center;
+    align-items: center;
+    height: 24px;
+    display: flex;
+  }
+} */
 .border-checkbox {
   display: flex;
   justify-content: center;
@@ -669,7 +700,7 @@ body {
 }
 
 .header {
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 @media screen and (max-width: 767px) {
@@ -769,10 +800,8 @@ body {
 
 .header-list {
   display: flex;
-}
-
-.header-list .header-list__item + .header-list__item {
-  margin-right: 50px;
+  /*  & .header-list__item + .header-list__item {
+  } */
 }
 
 .header-contacts__item {
@@ -857,19 +886,52 @@ body {
   color: var(--main-button-color);
 }
 
-@media screen and (max-width: 1199px) {
-  .contacts__item--first {
-    padding-top: 18px;
-  }
-  .contacts__item--second {
-    padding-bottom: 18px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .contacts__item {
     padding-top: 32px;
     padding-bottom: 32px;
+  }
+}
+
+.first {
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  display: flex;
+  color: var(--first-text-color);
+  transition: color var(--ms--cubic);
+}
+
+.first:hover, .first:focus {
+  color: var(--main-button-color);
+}
+
+@media screen and (max-width: 1199px) {
+  .first {
+    padding-top: 18px;
+  }
+}
+
+.second {
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  display: flex;
+  color: var(--first-text-color);
+  transition: color var(--ms--cubic);
+}
+
+.second:hover, .second:focus {
+  color: var(--main-button-color);
+}
+
+@media screen and (max-width: 1199px) {
+  .second {
+    padding-bottom: 18px;
   }
 }
 
@@ -881,12 +943,10 @@ body {
 }
 
 .header-social-icon {
-  fill: currentColor;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 16px;
+  height: 16px;
   margin-right: 10px;
-  padding-bottom: 4px;
+  fill: currentColor;
 }
 
 .hero {
@@ -1030,7 +1090,7 @@ body {
   .hang-list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
   }
 }
 
@@ -1315,8 +1375,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-right: -30px;
-  margin-bottom: -30px;
+  margin-left: -30px;
+  margin-top: -30px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1326,8 +1386,8 @@ body {
 }
 
 .clients__item {
-  margin-right: 30px;
-  margin-bottom: 30px;
+  margin-left: 30px;
+  margin-top: 30px;
   flex-basis: calc(100% / 2 - 30px);
 }
 
@@ -1358,7 +1418,7 @@ body {
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
-  width: 170px;
+  width: 100%;
   height: 92px;
   display: flex;
   align-items: center;
@@ -1434,7 +1494,6 @@ body {
 .contact-information {
   display: flex;
   flex-direction: column;
-  margin-bottom: 60px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1443,7 +1502,6 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: left;
-    margin-bottom: 60px;
   }
 }
 
@@ -1510,7 +1568,7 @@ body {
 
 .footer-social-list {
   display: flex;
-  margin-left: -10px;
+  /* margin-left: -10px; */
 }
 
 .footer-social__item {
@@ -1551,7 +1609,7 @@ body {
 }
 
 .modal-input-email {
-  width: 358px;
+  /* width: 358px; */
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
