--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -6,7 +6,7 @@
   margin: 0 auto;
 
   .hero & {
-    width: 360px;
+    /*  width: 360px; */
     padding: 0;
     text-align: center;
     @media screen and (min-width: 1200px) {
