--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -25,15 +25,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-right: -30px;
-  margin-bottom: -30px;
+  margin-left: -30px;
+  margin-top: -30px;
   @media screen and (min-width: 1200px) {
     margin-bottom: 0;
   }
 }
 .clients__item {
-  margin-right: 30px;
-  margin-bottom: 30px;
+  margin-left: 30px;
+  margin-top: 30px;
   flex-basis: calc(100% / 2 - 30px);
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 3 - 30px);
@@ -58,7 +58,7 @@
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
-  width: 170px;
+  width: 100%;
   height: 92px;
   display: flex;
   align-items: center;
