--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -55,14 +55,11 @@
   display: flex;
   flex-direction: column;
 
-  margin-bottom: 60px;
-
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: left;
-    margin-bottom: 60px;
   }
   @media screen and (min-width: 1200px) {
     margin-bottom: 0;
@@ -111,7 +108,7 @@
 }
 .footer-social-list {
   display: flex;
-  margin-left: -10px;
+  /* margin-left: -10px; */
 }
 
 .footer-social__item {
@@ -139,7 +136,7 @@
   }
 }
 .modal-input-email {
-  width: 358px;
+  /* width: 358px; */
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
