--- a/sass/layout/_hang.scss
+++ b/sass/layout/_hang.scss
@@ -30,7 +30,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
