--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -131,7 +131,9 @@
     height: 100%;
   }
 }
-
+.card__image {
+  width: 100%;
+}
 .portfolio-list__tittle {
   font-weight: 700;
   font-size: 18px;
