--- a/sass/components/_mob-menu.scss
+++ b/sass/components/_mob-menu.scss
@@ -14,6 +14,7 @@
   }
   &.mob-menu__btn--open {
     margin-left: auto;
+
     @media screen and (min-width: 768px) {
       display: none;
     }
@@ -45,9 +46,10 @@
     align-items: flex-start;
     z-index: 999;
     transform: translateX(105%);
-    transition: color var(--ms--cubic);
+    transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   &.is-open {
+    transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateX(0);
     opacity: 1;
     visibility: visible;
@@ -80,6 +82,7 @@
   text-align-last: left;
   display: flex;
   flex-direction: column;
+
   @media screen and (max-width: 767px) {
     height: 769px;
   }
@@ -155,7 +158,7 @@
 .mob-social__list {
   display: flex;
 
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 .mob-social__item:not(:last-child) {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
@@ -179,6 +182,9 @@
   &:hover,
   &:focus {
     color: var(--primary-text-color);
+  }
+  @media screen and(max-width:480px) {
+    font-size: 3vw;
   }
 }
 .mob-social__link--after {
